[metadata]
description-file = README.md

[aliases]
# Use pytest for testing locally:
test = pytest
# And also for Continuous Integration tests:
citest = test

[tool:pytest]
# Options for pytest
# Adds following CLI options whenever pytest is triggered
addopts =
    --cov krux

[nosetests]
cover-branches = 1
cover-html = 1
cover-inclusive = 1
cover-package = krux
verbosity = 2
with-coverage = 1
with-id = 1

[flake8]
max-line-length = 120
