[metadata]
description-file = README.md

[aliases]
# Use pytest for testing locally:
test = pytest
# And also for Continuous Integration tests:
citest = test

[tool:pytest]
# Options for pytest
# Adds following CLI options whenever pytest is triggered
addopts = --pylint --mypy --cov=krux

[mypy]
files=krux
ignore_missing_imports=True
no_site_packages=True
